Migrate missions to LinkedHashMap